--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,7 +13,7 @@
 
 <body>
 <main class="flex">
-  <nav class="flex w-full">
+  <nav class="flex w-56">
     <div class="w-64 p-4 h-screen bg-gray-600 sticky top-0">
       <div class="flex">
         <%= image_tag "logo.jpg", class: 'w-16' %>
@@ -45,13 +45,14 @@
           <%= link_to admin_path, class:"block px-4 py-2 hover:rounded hover:bg-gray-700" do %>
             <%= icon('fa-solid', 'truck-fast') %>
             <span class="hidden md:inline-block">Orders</span>
-
           <% end %>
         </li>
       </ul>
     </div>
   </nav>
+  <div class="w-full p-8">
   <%= yield %>
+  </div>
 </main>
 </body>
 </html>
