--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,7 +6,6 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <%= javascript_importmap_tags %>
 </head>
@@ -15,30 +14,28 @@
 <main class="flex">
   <nav class="flex w-56">
     <div class="w-64 p-4 h-screen bg-gray-600 sticky top-0">
-      <div class="flex">
-        <%= image_tag "logo.jpg", class: 'w-16' %>
-        <h1 class="text-md py-2 text-gray-50 font-bold hidden md:block">FoodApp</h1>
+      <div class="flex items-center">
+        <%= image_tag "logo.jpg", class: 'w-16 rounded-full' %>
+        <h1 class="text-md py-2 text-gray-50 font-bold hidden md:block ml-2">FoodApp</h1>
       </div>
+
       <ul class="flex flex-col text-gray-50">
         <li>
           <%= link_to admin_path, class:"block px-4 py-2 hover:rounded hover:bg-gray-700" do %>
             <%= icon('fa-solid', 'gauge-high') %>
             <span class="hidden md:inline-block">Dashboard</span>
-
           <% end %>
         </li>
         <li>
           <%= link_to admin_path, class:"block px-4 py-2 hover:rounded hover:bg-gray-700" do %>
             <%= icon('fa-solid', 'cart-shopping') %>
             <span class="hidden md:inline-block">Product</span>
-
           <% end %>
         </li>
         <li>
           <%= link_to admin_categories_path, class:"block px-4 py-2 hover:rounded hover:bg-gray-700" do %>
             <%= icon('fa-solid', 'list') %>
             <span class="hidden md:inline-block">Categories</span>
-
           <% end %>
         </li>
         <li>
@@ -51,7 +48,7 @@
     </div>
   </nav>
   <div class="w-full p-8">
-  <%= yield %>
+    <%= yield %>
   </div>
 </main>
 </body>
