--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -7,22 +7,44 @@
 
   <% end %>
 
+  <div class="my-5">
+    <%= form.label :name %>
+    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  </div>
 
-  <%= form.label :name %>
-  <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  <div class="my-5">
+    <%= form.label :description %>
+    <%= form.text_area :description, rows: 4, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  </div>
 
-  <%= form.label :description %>
-  <%= form.text_area :description, rows: 4, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  <div class="my-5">
+    <% if admin_product.images.any? %>
+      <% admin_product.images.each do |image| %>
+        <%= image_tag image.variant(:thumb), class: "w-20 h-20 object-cover rounded-md" %>
+      <% end %>
+    <% end %>
+    <%= form.label :images %>
+    <%= form.file_field :images, multiple: true, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  </div>
 
-  <%= form.label :price %>
-  <%= form.number_field :price, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  <div class="my-5">
+    <%= form.label :price %>
+    <%= form.number_field :price, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  </div>
 
-  <%= form.label :category_id %>
-  <%= form.text_field :category_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  <div class="my-5">
+    <%= form.label :category_id %>
+    <div class="flex items-center">
+      <%= form.collection_select :category_id, Category.order(:name), :id, :name, id:"category", class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
 
-  <%= form.label :active %>
-  <%= form.check_box :active, class: "block mt-2 h-5 w-5" %>
- <br>
+      <div class="flex items-right ml-4">
+        <%= form.label :active, class: "ml-2" %>
+        <%= form.check_box :active, class: "block ml-2 h-5 w-5" %>
+      </div>
+    </div>
+  </div>
+
+
   <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
 
 <% end %>
