--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,7 +15,7 @@
   <nav class="flex w-56">
     <div class="w-64 p-4 h-screen bg-gray-600 sticky top-0">
       <div class="flex items-center">
-        <%= image_tag "logo.jpg", class: 'w-16 rounded-full' %>
+        <%= image_tag "logo1.png", class: 'w-16 rounded-full' %>
         <h1 class="text-md py-2 text-gray-50 font-bold hidden md:block ml-2">FoodApp</h1>
       </div>
 
