--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -4,8 +4,8 @@
   <% end %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Products</h1>
-    <%= link_to "New product", new_admin_product_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <h1 class="font-bold text-4xl">Orders</h1>
+    <%= link_to "New order", new_admin_order_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div class="flex flex-col w-full">
@@ -16,33 +16,33 @@
             <thead class="bg-white border-b">
             <tr>
               <th scope="col" class="text-sm font-medium text-gray-800 px-6 py-4 text-left">
-
+               ID
               </th>
               <th scope="col" class="text-sm font-medium text-gray-800 px-6 py-4 text-left">
-                Name
+                E-mail
               </th>
               <th scope="col" class="text-sm font-medium text-gray-800 px-6 py-4 text-left">
-                Description
+                Address
               </th>
               <th scope="col" class="text-sm font-medium text-gray-800 px-6 py-4 text-left">
-                Price
+                Total
               </th>
             </tr>
             </thead>
             <tbody>
-            <% @admin_products.each do |p| %>
+            <% @admin_orders.each do |o| %>
               <tr class="bg-gray-50 border-b">
                 <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-800 underline">
-                  <%= p.images.any? ? image_tag(p.images.first.variant(:thumb)) : image_tag("https://via.placeholder.com/50") %>
-                </td>
-                <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-800 underline">
-                  <%= link_to p.name, edit_admin_product_path(p) %>
+                  <%= link_to o.id, [:admin, o], class: 'underline' %>
                 </td>
                 <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-800">
-                  <%= p.description %>
+                  <%= o.customer_email %>
                 </td>
                 <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-800">
-                  R$ <%= p.price %>
+                  <%= o.address %>
+                </td>
+                <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-800">
+                  R$ <%= o.total %>
                 </td>
               </tr>
             <% end %>
