--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -38,7 +38,7 @@
   </div>
 
   <div class="my-8 w-full">
-    <h2 class="text-2xl text-gray-800 font-medium mb-4">Revenue</h2>
+    <h2 class="text-2xl text-gray-800 font-medium mb-4">Gráfico Receita</h2>
     <div class="w-full" data-controller="dashboard" data-dashboard-revenue-value="<%= @revenue_by_day.to_json%>">
       <canvas id="revenueChart"></canvas>
     </div>
