--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
         </div>
         <div class="flex-shrink-0 flex items-center">
           <%= link_to root_path do %>
-            <%= image_tag 'logo2.jpg', class: 'block lg:hidden h-20 w-auto'%>
+            <%= image_tag 'logo.jpg', class: 'block lg:hidden h-20 w-auto'%>
           <% end %>
           <%= link_to root_path do %>
             <%= image_tag 'logo3.jpg', class: 'block lg:block h-20  w-auto'%>
