chore: criando Pagina Inicial - inclusao imagens

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
             <%= image_tag 'logo.jpg', class: 'block lg:hidden h-20 w-auto'%>
           <% end %>
           <%= link_to root_path do %>
-            <%= image_tag 'logo3.jpg', class: 'block lg:block h-20  w-auto'%>
+            <%= image_tag 'logo.jpg', class: 'block lg:block h-20  w-auto'%>
           <% end %>
         </div>
         <div class="hidden sm:flex sml:ml-6 items-center justify-center">
