--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,17 +3,17 @@
     <div class="xl:grid xl:grid-cols-3 xl:gap-8">
       <div class="space-y-8 xl:col-span-1">
         <h3 class="text-sm font-semibold text-gray-200 tracking-wider uppercase">
-          About Ecomm
+         Sobre FoodApp
         </h3>
         <p class="text-white leading-6">
-          Marketplace específico para vendas de produtos
+          FoodApp - Tudo que você precisa para seu lanche!
         </p>
       </div>
       <div class="mt-12 grid grid-cols-2 gap-8 xl:mt-0 xl:col-span-2">
         <div class="md:grid md:grid-cols-2 md:gap-8">
           <div>
             <h3 class="text-sm font-semibold text-gray-200 tracking wider uppercase">
-              Quick Links
+               Links
             </h3>
             <ul class="mt-4 space-y-4">
               <li>
@@ -26,12 +26,12 @@
       <div class="mt-8 mb-8 md:grid md:grid-cols-2 md:gap-8">
         <div>
           <h3 class="text-sm font-semibold tracking-wider uppercase text-gray-200">
-            Contact
+            Contato
           </h3>
           <ul class="mt-4 space-y-4">
             <li>
               <p class="text-base leading-6 text-white">
-                Ecom Test <br>
+                Test Food <br>
                 Ecommerce, Test
               </p>
             </li>
@@ -42,7 +42,7 @@
             </li>
             <li>
               <p class="text-base leading-6 text-white">
-                Phone: (99)94342-2343
+                Phone: (XX)94342-2343
               </p>
             </li>
           </ul>
@@ -51,7 +51,7 @@
       <div class="border-t border-gray-700">
         <div class="max-w-6xl mx-auto px-4 py-6 md:flex md:items-center md:justify-between">
           <p class="mt-6 text-base leading-6 text-gray-400 md:mt-0 md:order-1">
-            © <%= Time.now.year%> Ecomm, Inc. All rights reserved.
+            © <%= Time.now.year%>  Food, Inc. All rights reserved.
           </p>
         </div>
       </div>
